--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="./assets/lytebox.js"></script>
 </head>
 <div id="container">
-	<div id="header"><img src="./assets/logo.jpg" width="250" height="200" class="logo"><img src="./assets/mountainheader.jpg" width="460" height="200">	</div>
+	<div id="header"><img src="./assets/logo.JPG" width="250" height="200" class="logo"><img src="./assets/mountainheader.JPG" width="460" height="200">	</div>
 <div id="content">
 <div class="dict">
 <p><strong>ki wi [kee-wee] noun, plural -wis.</strong><br>
@@ -48,29 +48,29 @@
           <table width="200" border="0" cellpadding="5" cellspacing="0" align="center">
             <tbody>
               <tr>
-                <td><div align="center"><a href="./assets/sidewalkview2.jpg" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview2_thumb.jpg" border="0"></a></div></td>
-                <td><div align="center"><a href="./assets/sidewalkview.jpg" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview_thumb.jpg" border="0"></a></div></td>
+                <td><div align="center"><a href="./assets/sidewalkview2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview2_thumb.JPG" border="0"></a></div></td>
+                <td><div align="center"><a href="./assets/sidewalkview.JPG" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview_thumb.JPG" border="0"></a></div></td>
             </tr>
       			<tr>
-              <td><div align="center"><a href="./assets/frontdoor.jpg" rel="lytebox[kiwiwest]"><img src="./assets/frontdoor_thumb.jpg" border="0"></a></div></td>
-              <td><div align="center"><a href="./assets/frontroom2.jpg" rel="lytebox[kiwiwest]"><img src="./assets/frontroom2_thumb.jpg" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/frontdoor.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontdoor_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/frontroom2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontroom2_thumb.JPG" border="0"></a></div></td>
             </tr>
 
       			<tr>
-              <td><div align="center"><a href="./assets/frontroom.jpg" rel="lytebox[kiwiwest]"><img src="./assets/frontroom_thumb.jpg" border="0"></a></div></td>
-              <td><div align="center"><a href="./assets/bed.jpg" rel="lytebox[kiwiwest]"><img src="./assets/bed_thumb.jpg" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/frontroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontroom_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/bed.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bed_thumb.JPG" border="0"></a></div></td>
             </tr>
             <tr>
-              <td><div align="center"><a href="./assets/bathroom.jpg" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.jpg" border="0"></a></div></td>
-              <td><div align="center"><a href="./assets/porch.jpg" rel="lytebox[kiwiwest]"><img src="./assets/porch_thumb.jpg" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/porch.JPG" rel="lytebox[kiwiwest]"><img src="./assets/porch_thumb.JPG" border="0"></a></div></td>
             </tr>
 <!--             <tr>
-              <td><div align="center"><a href="http://www.kiwiwest.com/images/gallery/kiwihouse-inside-fireplace.jpg" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-inside-fireplace-thumb.jpg" border="0"></a></div></td>
-              <td><div align="center"><a href="http://www.kiwiwest.com/images/gallery/kiwihouse-inside-kitchen.jpg" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-inside-kitchen-thumb.jpg" border="0"></a></div></td>
+              <td><div align="center"><a href="http://www.kiwiwest.com/images/gallery/kiwihouse-inside-fireplace.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-inside-fireplace-thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="http://www.kiwiwest.com/images/gallery/kiwihouse-inside-kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-inside-kitchen-thumb.JPG" border="0"></a></div></td>
             </tr>
             <tr>
-            <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-tub-thumb.jpg" border="0"></a></div></td>
-            <td><div align="center"><a href="./assets/bathroom.jpg" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.jpg" border="0"></a></div></td>
+            <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-tub-thumb.JPG" border="0"></a></div></td>
+            <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.JPG" border="0"></a></div></td>
             </tr> -->
           </tbody></table>
 
