--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="./assets/lytebox.js"></script>
 </head>
 <div id="container">
-	<div id="header"><img src="./assets/logo.JPG" width="250" height="200" class="logo"><img src="./assets/mountainheader.JPG" width="460" height="200">	</div>
+	<div id="header"><img src="./assets/logo.jpg" width="250" height="200" class="logo"><img src="./assets/mountainheader.jpg" width="460" height="200">	</div>
 <div id="content">
 <div class="dict">
 <p><strong>ki wi [kee-wee] noun, plural -wis.</strong><br>
