added rental agreement pdf

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           10.4% sales and hotel tax not included.<br></p>
 <p><i>We now accept Visa and Mastercard.</i></p>
           
-          <p><img src="./assets/pdf-icon.gif" alt="PDF" width="23" height="20"><a href="http://www.kiwiwest.com/assets/RENTAL%20AGREEMENT.pdf">Download the Rental Agreement</a></p>
+          <p><img src="./assets/pdf-icon.gif" alt="PDF" width="23" height="20"><a href="http://www.kiwiwest.com/assets/RENTAL_AGREEMENT.pdf">Download the Rental Agreement</a></p>
 <center><p><a href="http://www.vrbo.com/141655">Our VRBO Site</a></p></center>
         <h2>Photos</h2>
         
