updated image to show kitchen

--- a/index.html
+++ b/index.html
@@ -52,18 +52,22 @@
                 <td><div align="center"><a href="./assets/sidewalkview.JPG" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview_thumb.JPG" border="0"></a></div></td>
             </tr>
       			<tr>
-              <td><div align="center"><a href="./assets/frontdoor.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontdoor_thumb.JPG" border="0"></a></div></td>
               <td><div align="center"><a href="./assets/frontroom2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontroom2_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/frontroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontroom_thumb.JPG" border="0"></a></div></td>
             </tr>
 
       			<tr>
-              <td><div align="center"><a href="./assets/frontroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontroom_thumb.JPG" border="0"></a></div></td>
               <td><div align="center"><a href="./assets/bed.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bed_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kitchen_thumb.JPG" border="0"></a></div></td>
             </tr>
             <tr>
               <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.JPG" border="0"></a></div></td>
               <td><div align="center"><a href="./assets/porch.JPG" rel="lytebox[kiwiwest]"><img src="./assets/porch_thumb.JPG" border="0"></a></div></td>
             </tr>
+
+
+
+
 <!--             <tr>
               <td><div align="center"><a href="http://www.kiwiwest.com/images/gallery/kiwihouse-inside-fireplace.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-inside-fireplace-thumb.JPG" border="0"></a></div></td>
               <td><div align="center"><a href="http://www.kiwiwest.com/images/gallery/kiwihouse-inside-kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kiwihouse-inside-kitchen-thumb.JPG" border="0"></a></div></td>
