--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       			<tr>
               <td><div align="center"><a href="./assets/bed.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bed_thumb.JPG" border="0"></a></div></td>
-              <td><div align="center"><a href="./assets/kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kitchen_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kitchen_thumb.jpg" border="0"></a></div></td>
             </tr>
             <tr>
               <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.JPG" border="0"></a></div></td>
