change image 1 test

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           <table width="200" border="0" cellpadding="5" cellspacing="0" align="center">
             <tbody>
               <tr>
-                <td><div align="center"><a href="./assets/sidewalkview2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview2_thumb.JPG" border="0"></a></div></td>
+                <td><div align="center"><a href="./assets/new_images/1.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/1-thumb.JPG" border="0"></a></div></td>
                 <td><div align="center"><a href="./assets/sidewalkview.JPG" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview_thumb.JPG" border="0"></a></div></td>
             </tr>
       			<tr>
