--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
           <table width="200" border="0" cellpadding="5" cellspacing="0" align="center">
             <tbody>
               <tr>
-                <td><div align="center"><a href="./assets/new_images/1.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/1-thumb.JPG" border="0"></a></div></td>
-                <td><div align="center"><a href="./assets/sidewalkview.JPG" rel="lytebox[kiwiwest]"><img src="./assets/sidewalkview_thumb.JPG" border="0"></a></div></td>
+                <td><div align="center"><a href="./assets/new_images/1.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/1-thumb.jpg" border="0"></a></div></td>
+                <td><div align="center"><a href="./assets/new_images/2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/new_images/2.jpg" border="0"></a></div></td>
             </tr>
       			<tr>
               <td><div align="center"><a href="./assets/frontroom2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/frontroom2_thumb.JPG" border="0"></a></div></td>
@@ -81,7 +81,7 @@
   <div class="clear"></div>
   </div>
 	<div id="footer">
-		<p>Copyright 2013 Kiwi West. All Rights Reserved.</p>
+		<p>Copyright 2015 Kiwi West. All Rights Reserved.</p>
 	</div>
 </div>
 
