--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
             </tr>
 
       			<tr>
-              <td><div align="center"><a href="./assets/bed.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bed_thumb.JPG" border="0"></a></div></td>
-              <td><div align="center"><a href="./assets/kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kitchen_thumb.jpg" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/new_images/5.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/5-thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/new_images/6.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/6-thumb.jpg" border="0"></a></div></td>
             </tr>
             <tr>
               <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.JPG" border="0"></a></div></td>
