--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             <tbody>
               <tr>
                 <td><div align="center"><a href="./assets/new_images/1.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/1-thumb.jpg" border="0"></a></div></td>
-                <td><div align="center"><a href="./assets/new_images/2.JPG" rel="lytebox[kiwiwest]"><img src="./assets/new_images/2-thumb.jpg" border="0"></a></div></td>
+                <td><div align="center"><a href="./assets/new_images/2.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/2-thumb.jpg" border="0"></a></div></td>
             </tr>
       			<tr>
               <td><div align="center"><a href="./assets/new_images/3.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/3-thumb.jpg" border="0"></a></div></td>
