Updated rates and images.

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,10 @@
             Port Angeles, WA 98362<br>
    			<a href="http://maps.google.com/maps?f=q&hl=en&q=931+west+12th+street+port+angeles+washington&sll=37.0625,-95.677068&sspn=71.064097,101.074219&ie=UTF8&ll=48.116887,-123.457983&spn=0.007521,0.012338&t=h&z=16&iwloc=addr&om=1">Map to Kiwi West</a></p>
         <h2>Rates &amp; Information</h2>
-       <h3> May - September</h3>
           <h3>Per Night</h3>
           <p>$135/night including cleaning fee.</p>
-          <h3>October - April</h3>
-          <p>$99/night including cleaning fee.<br>
-<br>*Minimum 2 night stay.<br>
+          <p>
+*Minimum 2 night stay.<br>
           Children 8 and over additional $20 per night.<br>
           10.4% sales and hotel tax not included.<br></p>
 <p><i>We now accept Visa and Mastercard.</i></p>
@@ -55,10 +53,13 @@
               <td><div align="center"><a href="./assets/new_images/3.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/3-thumb.jpg" border="0"></a></div></td>
               <td><div align="center"><a href="./assets/new_images/4.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/4-thumb.jpg" border="0"></a></div></td>
             </tr>
-
       			<tr>
               <td><div align="center"><a href="./assets/new_images/5.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/5-thumb.jpg" border="0"></a></div></td>
               <td><div align="center"><a href="./assets/new_images/6.jpg" rel="lytebox[kiwiwest]"><img src="./assets/new_images/6-thumb.jpg" border="0"></a></div></td>
+            </tr>
+            <tr>
+              <td><div align="center"><a href="./assets/kitchen.JPG" rel="lytebox[kiwiwest]"><img src="./assets/kitchen_thumb.JPG" border="0"></a></div></td>
+              <td><div align="center"><a href="./assets/bed.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bed_thumb.JPG" border="0"></a></div></td>
             </tr>
             <tr>
               <td><div align="center"><a href="./assets/bathroom.JPG" rel="lytebox[kiwiwest]"><img src="./assets/bathroom_thumb.JPG" border="0"></a></div></td>
